--- a/public/frontend/seller/assets/style.css
+++ b/public/frontend/seller/assets/style.css
@@ -2489,13 +2489,14 @@ header.thnkPage .dropdown-toggle {
     font-size: 14px;
 }
 .vp-box .vp-img {
-    height: 100%;
+    height: 240px;
 }
 .vp-box .vp-img img {
     max-width: 100%;
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    /*object-fit: cover;*/
+    object-fit: contain;
 }
 .vp-box .vp-content {
     padding: 30px;
