--- a/public/frontend/seller/assets/style.css
+++ b/public/frontend/seller/assets/style.css
@@ -3219,3 +3219,6 @@ sec-3-txt button a{
 button.green-btn:hover {
     background: #202543 !important;
 }
+.head-btns button a:not([href]):not([class]) {
+    color: #ffff;
+}
