--- a/public/frontend/seller/assets/custom.css
+++ b/public/frontend/seller/assets/custom.css
@@ -1,66 +1,66 @@
 header {
-    z-index: 9;
+  z-index: 9;
 }
 header .logo-navlinks a img {
-    vertical-align: unset !important;
+  vertical-align: unset !important;
 }
 
 .navlinks .dropdown span{
-    display:block;
-    text-transform:uppercase;
+  display:block;
+  text-transform:uppercase;
 }
 .head-btns button {
-    all: unset !important;
+  all: unset !important;
 }
 
 .head-btns button a {
-    padding: 12px 35px;
-    width: 100%;
-    font-weight: 600;
-    margin:0;
-    font-size: 14px;
-    background: #202543;
-    color: #fff;
-    border-radius: 100px;
-    transition: all .4s ease-in;
-    text-transform: uppercase;
-    line-height: 1.3;
-    display: block;
-    text-decoration: none;
+  padding: 12px 35px;
+  width: 100%;
+  font-weight: 600;
+  margin:0;
+  font-size: 14px;
+  background: #202543;
+  color: #fff;
+  border-radius: 100px;
+  transition: all .4s ease-in;
+  text-transform: uppercase;
+  line-height: 1.3;
+  display: block;
+  text-decoration: none;
 }
 
 .head-btns button a:hover {
-    background: #05eab5;
+  background: #05eab5;
 }
 .head-btns {
-    gap: 15px;
+  gap: 15px;
 }
 .header-light .navlinks .dropdown span {
-    color: #000;
+  color: #000;
 }
 /*Header End*/
 /*Footer */
 .footer-social {
-    display: flex;
-    gap: 14px;
+  display: flex;
+  gap: 14px;
 }
 
 .footer-social li a {
-    display: flex !important;
-    justify-content: center;
-    align-items: center;
-    background: #05eab5;
-    color: #fff;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    font-size: 16px;
-    text-align: center;
-    transition: all .4s ease-in;
+  display: flex !important;
+  justify-content: center;
+  align-items: center;
+  background: #05eab5;
+  color: #fff;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  font-size: 16px;
+  text-align: center;
+  transition: all .4s ease-in;
 }
 
 .footer-social li a:hover {
-    background: #7977a2;
+  background: #7977a2;
 }
 
 /*Footer End */
@@ -68,520 +68,537 @@ header .logo-navlinks a img {
 
 /*About Page Css*/
 .inner-banner {
-    padding: 210px 0 160px 0;
-    background: url('https://www.webprojectmockup.com/custom/motorific/public/frontend/seller/assets/image/PU-sec-1.png');
-    background-size: cover;
-    background-position: center;
-    position: relative;
-    z-index: 1;
+  padding: 210px 0 160px 0;
+  background: url('https://www.webprojectmockup.com/custom/motorific/public/frontend/seller/assets/image/PU-sec-1.png');
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  z-index: 1;
 }
 
 .inner-banner:before {
-    content: '';
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background: linear-gradient(90deg, rgba(25,23,56,1) 0%, rgba(30,28,61,1) 18%, rgba(31,29,62,0.9444152661064426) 45%, rgba(33,31,63,0.6615021008403361) 60%, rgba(2,0,36,0) 100%);
-    z-index: -1;
+  content: '';
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: linear-gradient(90deg, rgba(25,23,56,1) 0%, rgba(30,28,61,1) 18%, rgba(31,29,62,0.9444152661064426) 45%, rgba(33,31,63,0.6615021008403361) 60%, rgba(2,0,36,0) 100%);
+  z-index: -1;
 }
 
 .banner-inner-cont h1 {
-    color: #fff;
-    font-size: 50px;
-    font-weight: 700;
+  color: #fff;
+  font-size: 50px;
+  font-weight: 700;
 }
 .banner-inner-cont p {
-    color: #fff;
-    font-size: 16px;
-    line-height: 1.4;
-    max-width: 50%;
-    font-weight: 300;
+  color: #fff;
+  font-size: 16px;
+  line-height: 1.4;
+  max-width: 50%;
+  font-weight: 300;
 }
 .about-sec2 {
-    padding: 100px 0;
+  padding: 100px 0;
 }
 
 
 .about-sec2 .about-img-box img {
-    max-width: 100%;
-    border-radius: 10px;
-    border: 1px solid #f1f1f1;
+  max-width: 100%;
+  border-radius: 10px;
+  border: 1px solid #f1f1f1;
 }
 
 .about-sec2 .about-content {
-    max-width: 85%;
+  max-width: 85%;
 }
 
 .about-sec2 .about-content p {
-    line-height: 1.5;
-    font-weight: 400;
+  line-height: 1.5;
+  font-weight: 400;
 }
 .about-sec2 .abt-cont-wraper2 .about-content {
-    padding-left: 40px;
+  padding-left: 40px;
 }
 
 .about-sec2 .abt-cont-wraper1 {
-    margin-bottom: 60px;
+  margin-bottom: 60px;
 }
 
 .sec-title {
-    font-size: 40px;
-    font-weight: 600;
-    text-align: center;
-    color: #000;
+  font-size: 40px;
+  font-weight: 600;
+  text-align: center;
+  color: #000;
 }
 
 .team-sec {
-    padding-bottom: 110px;
+  padding-bottom: 110px;
 }
 .team-sec .sec-desc {
-    max-width: 60%;
-    margin: 30px auto 50px;
-    text-align: center;
+  max-width: 60%;
+  margin: 30px auto 50px;
+  text-align: center;
 }
 
 .team-main .sec-title {
-    text-align: center;
-    font-weight: 600;
-    color: #000;
-    font-size: 30px;
+  text-align: center;
+  font-weight: 600;
+  color: #000;
+  font-size: 30px;
 }
 
 .team-wraper {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 100px 25px;
-    justify-content: center;
-    padding-top:110px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 100px 25px;
+  justify-content: center;
+  padding-top:110px;
 }
 
 .team-wraper .team-box {
-    width: 100%;
-    max-width: calc(33.33% - 20px);
-    background: #f2f2f2;
-    text-align: center;
-    padding: 20px;
-    border-radius: 5px;
-    position: relative;
+  width: 100%;
+  max-width: calc(33.33% - 20px);
+  background: #f2f2f2;
+  text-align: center;
+  padding: 20px;
+  border-radius: 5px;
+  position: relative;
 }
 
 .team-wraper .team-box .team-img {
-    width: 170px;
-    height: 170px;
-    box-shadow: 0 0 4px 0 #1d1d1b26;
-    overflow: hidden;
-    border-radius: 50%;
-    margin: 0 auto -60px;
-    transform: translateY(-50%);
+  width: 170px;
+  height: 170px;
+  box-shadow: 0 0 4px 0 #1d1d1b26;
+  overflow: hidden;
+  border-radius: 50%;
+  margin: 0 auto -60px;
+  transform: translateY(-50%);
 }
 
 .team-wraper .team-box .team-img img {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 .team-box .t-name {
-    font-size: 24px;
-    color: #000;
-    margin-bottom: 4px;
+  font-size: 24px;
+  color: #000;
+  margin-bottom: 4px;
 }
 .team-box .t-designation {
-    font-size: 16px;
-    color: #000;
+  font-size: 16px;
+  color: #000;
 }
 .career-sec-cta {
-    padding: 100px 0;
-    background: #202543;
+  padding: 100px 0;
+  background: #202543;
 }
 
 .career-sec-cta .sec-title {
-    color: #fff;
-    margin-bottom: 20px;
+  color: #fff;
+  margin-bottom: 20px;
 }
 
 .career-sec-cta .sec-desc {
-    color: #fff;
-    max-width: 70%;
-    margin: 0 auto 30px;
-    text-align: center;
+  color: #fff;
+  max-width: 70%;
+  margin: 0 auto 30px;
+  text-align: center;
 }
 .globel-btn {
-    padding: 12px 30px;
-    background: #05eab5;
-    border-radius: 100px;
-    text-decoration: none;
-    text-transform: uppercase;
-    font-weight: 600;
-    color: #fff;
-    margin: 0 auto;
-    border: 2px solid transparent;
-    line-height: 1.3;
-    display: block;
-    width: fit-content;
-    transition: all .4s ease-in;
+  padding: 12px 30px;
+  background: #05eab5;
+  border-radius: 100px;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: 600;
+  color: #fff;
+  margin: 0 auto;
+  border: 2px solid transparent;
+  line-height: 1.3;
+  display: block;
+  width: fit-content;
+  transition: all .4s ease-in;
 }
 
 .globel-btn:hover {
-    color: #05eab5;
-    background: transparent;
-    border-color: #05eab5;
+  color: #05eab5;
+  background: transparent;
+  border-color: #05eab5;
 }
 .invest-sec {
-    padding: 70px 0;
+  padding: 70px 0;
 }
 .invest-sec .sec-title {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 .invest-sec .sec-desc {
-    max-width: 50%;
-    margin: 0 auto 30px;
-    text-align: center;
+  max-width: 50%;
+  margin: 0 auto 30px;
+  text-align: center;
 }
 
 .invest-logos {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    padding: 60px 50px;
-    box-shadow: 0 0 4px 0 #1d1d1b26;
-    margin-top: 60px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 60px 50px;
+  box-shadow: 0 0 4px 0 #1d1d1b26;
+  margin-top: 60px;
 }
 
 .invest-logos a {
-    display: block;
+  display: block;
 }
 
 .invest-logos .logo {
-    width: 160px;
-    height: 64px;
-    object-fit: contain;
+  width: 160px;
+  height: 64px;
+  object-fit: contain;
 }
 
 .sellCar-sec {
-    padding: 90px 0 100px;
-    background: #202543;
-    margin-bottom: 80px;
+  padding: 90px 0 100px;
+  background: #202543;
+  margin-bottom: 80px;
 }
 
 .sellCar-sec .sec-title {
-    color: #fff;
-    margin-bottom: 40px; 
+  color: #fff;
+  margin-bottom: 40px; 
 }
 
 .sellCar-sec .sell-form {
-    max-width: 35%;
-    margin: 0 auto;
+  max-width: 35%;
+  margin: 0 auto;
 }
 
 .sellCar-sec .sell-form input {
-    box-shadow: none;
-    font-size: 20px;
-    font-weight: 600;
-    text-transform: uppercase;
-    padding: 10px 30px;
-    border-radius: 100px;
-    border: none;
-    color: #000;
+  box-shadow: none;
+  font-size: 20px;
+  font-weight: 600;
+  text-transform: uppercase;
+  padding: 10px 30px;
+  border-radius: 100px;
+  border: none;
+  color: #000;
 }
 .sellCar-sec .sell-form .globel-btn {
-    width: 100%;
-    margin-top: 15px;
-    padding: 12px 20px;
+  width: 100%;
+  margin-top: 15px;
+  padding: 12px 20px;
 }
 /*About Page End*/
 
 /*Help Page Css*/
 .help-acc-sec {
-    padding: 90px 0;
+  padding: 90px 0;
 }
 
 .help-acc-sec .sec-title {
-    margin-bottom: 40px;
+  margin-bottom: 40px;
 }
 .help-acc-sec .accordion-button {
-    box-shadow: none ;
-    font-size: 18px;
-    font-weight: 600;
-    padding:20px 30px;
+  box-shadow: none ;
+  font-size: 18px;
+  font-weight: 600;
+  padding:20px 30px;
 }
 
 .help-acc-sec .accordion-button:not(.collapsed) {
-    background: #202543;
-    color: #fff;
+  background: #202543;
+  color: #fff;
 }
 
 .help-acc-sec .accordion-button:not(.collapsed):after {
-    filter: invert(1) brightness(100);
+  filter: invert(1) brightness(100);
 }
 
 .help-acc-sec .accordion-body {
-    padding: 40px 40px 25px;
+  padding: 40px 40px 25px;
 }
 
 
 
 .contact-cta {
-    margin-bottom: 80px;
+  margin-bottom: 80px;
 }
 
 /*Help Page End*/
 
 /*Seller Index Css*/
-.banner-sec .banner-title {
-    line-height: 1.2;
-    font-size:50px;
+.banner-sec h2,
+.banner-inner-title {
+  line-height: 1.2;
+  font-size:50px;
+  font-weight:700;
 }
-
+.banner-inner-title{
+  color: #fff;
+  font-weight: 700;
+  max-width: 100% !important;
+}
 .banner-sec .banner-desc {
-    font-size: 16px;
-    margin: 20px 0 25px;
-    padding: 0;
+  font-size: 16px;
+  margin: 20px 0 25px;
+  padding: 0;
 }
 
 .banner-sec .check_area input,
 .banner-sec .millage_area input[type="number"]{
-    width: 60%;
-    font-size: 24px;
-    padding: 12px 24px;
-    line-height: 1.2;
-    display:block;
+  width: 60%;
+  font-size: 24px;
+  padding: 12px 24px;
+  line-height: 1.2;
+  display:block;
 }
 .btn-prim,
 .btn-submit {
-    all: unset !important;
+  all: unset !important;
 }
 .btn-prim a,
 .btn-submit span {
-    font-size: 15px;
-    text-transform: uppercase;
-    font-weight: 700;
-    text-decoration: none;
-    padding: 14px 40px;
-    color: #fff;
-    background: #05eab5;
-    border-radius: 100px;
-    cursor:pointer;
-    transition: all .4s ease-in;
+  font-size: 15px;
+  text-transform: uppercase;
+  font-weight: 700;
+  text-decoration: none;
+  padding: 14px 40px;
+  color: #fff;
+  background: #05eab5;
+  border-radius: 100px;
+  cursor:pointer;
+  transition: all .4s ease-in;
 }
 .btn-prim a:hover,
 .btn-submit span:hover{
-    background:#7977a2;
+  background:#7977a2;
 }
 .btn-second a {
-    background: #7977a2;
+  background: #7977a2;
 }
 
 .btn-second a:hover {
-    background: #05eab5;
+  background: #05eab5;
 }
 
 .banner-sec .check_area button {
-    margin-top: 18px !important;
+  margin-top: 18px !important;
 }
 .millage_area input[type="number"]::-webkit-outer-spin-button, .millage_area input[type="number"]::-webkit-inner-spin-button {
-    appearance: none;
-    margin: 0;
+  appearance: none;
+  margin: 0;
 }
 .sec-heading {
-    font-size: 50px;
-    font-weight: 700;
+  font-size: 50px;
+  font-weight: 700;
 }
 
 .how-sec .how-work {
-    padding-top: 0;
+  padding-top: 0;
 }
 
 .how-sec .sec-2-btns {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
 
 .how-sec {
-    padding: 0 0 60px;
+  padding: 0 0 60px;
 }
 
 .how-sec .how-work-img {
-    margin-bottom: 25px;
+  margin-bottom: 25px;
 }
 
 .how-sec .howitwork-main h4 {
-    font-weight: 600;
+  font-weight: 600;
 }
 .btns-wraper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
 }
 .who-sec p {
-    font-size: 16px;
+  font-size: 16px;
 }
 .who-sec .btns-wraper {
-    justify-content: flex-start;
-    padding-top: 20px;
+  justify-content: flex-start;
+  padding-top: 20px;
 }
 
 .who-sec .btns-wraper .btn-prim:first-child a:hover {
-    background: #e4e3f1;
-    color: #7977a2;
+  background: #e4e3f1;
+  color: #7977a2;
 }
 
 .who-sec .btns-wraper .btn-prim:last-child a {
-    background: #e4e3f1;
-    color: #7977a2;
+  background: #e4e3f1;
+  color: #7977a2;
 }
 
 .who-sec .btns-wraper .btn-prim:last-child a:hover {
-    background: #05eab5;
-    color: #fff;
+  background: #05eab5;
+  color: #fff;
 }
 .who-sec .whoContent {
-    padding: 70px 0 100px;
+  padding: 70px 0 100px;
 }
 .who-sec::after {
-    width: 45%;
-    background-size: cover;
+  width: 45%;
+  background-size: cover;
 }
 .ycp-sec .btn-prim {
-    margin-top: 30px !important;
+  margin-top: 30px !important;
 }
 .ycp-sec .sec-4-box {
-    padding: 30px;
+  padding: 30px;
 }
 
 .ycp-sec .sec-4-box h4 {
-    font-size: 22px;
-    font-weight: 600;
-    line-height: 1.4;
-    padding: 15px 0;
+  font-size: 22px;
+  font-weight: 600;
+  line-height: 1.4;
+  padding: 15px 0;
 }
 
 .ycp-sec .sec-4-box p {
-    font-size: 16px;
-    margin-bottom: 0;
-    line-height: 1.3;
+  font-size: 16px;
+  margin-bottom: 0;
+  line-height: 1.3;
 }
 
 .ycp-sec .sec-4-box img {
-    height: 60px;
+  height: 60px;
 }
 section.ycp-sec {
-    margin-bottom: 30px;
+  margin-bottom: 30px;
 }
 
 .wsy-sec .sec-5-inner-txt {
-    padding-left: 50px;
-    min-height: 140px;
+  padding-left: 50px;
+  min-height: 140px;
 }
 .wsy-sec .sec-heading {
-    margin-bottom: 30px;
+  margin-bottom: 30px;
 }
 .testi-sec .sec-6-main-box p {
-    padding-top: 0;
+  padding-top: 0;
 }
 
 .testi-sec .sec-6-main-box {
-    margin-top: 44px;
+  margin-top: 44px;
 }
 .subs-wraper {
-    display: flex;
-    justify-content: space-between;
-    align-items: stretch;
-    gap: 40px;
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
+  gap: 40px;
 }
 
 .subs-wraper .sec-7-box {
-    width: 100%;
-    border-radius: 30px;
-    padding: 35px 40px;
-    min-height: 300px;
+  width: 100%;
+  border-radius: 30px;
+  padding: 35px 40px;
+  min-height: 300px;
 }
 
 .subs-wraper .sec-7-box h4 {
-    font-weight: 600;
-    margin: 0;
+  font-weight: 600;
+  margin: 0;
 }
 
 .subs-wraper .sec-7-box p {
-    padding: 10px 0 14px;
-    line-height: 1.4;
+  padding: 10px 0 14px;
+  line-height: 1.4;
 }
 
 .subs-wraper .sec-7-box input {
-    margin-bottom: 18px !important;
-    padding: 14px 28px;
-    font-size: 24px;
-    text-transform: uppercase;
-    line-height: 1.2;
+  margin-bottom: 18px !important;
+  padding: 14px 28px;
+  font-size: 24px;
+  text-transform: uppercase;
+  line-height: 1.2;
 }
 .subs-wraper .btn-submit,
 .subs-wraper .btn-prim {
-    margin-top: 10px !important;
+  margin-top: 10px !important;
 }
 .subs-wraper .btn-prim a:hover, .subs-wraper .btn-submit span:hover {
-    background: #e4e3f1;
-    color: #7977a2;
+  background: #e4e3f1;
+  color: #7977a2;
 }
 .subs-wraper .show_error1 {
-    display: block;
-    margin-bottom: 20px;
-    background: #e4e3f1;
-    width: fit-content;
-    padding: 3px 10px;
-    color: #7977a2 !important;
-    font-size: 12px;
-    border-radius: 4px;
-    font-weight: 600;
+  display: block;
+  margin-bottom: 20px;
+  background: #e4e3f1;
+  width: fit-content;
+  padding: 3px 10px;
+  color: #7977a2 !important;
+  font-size: 12px;
+  border-radius: 4px;
+  font-weight: 600;
 }
 /*Seller Index Css End*/
 
 .hts-sec .sec-heading {
-    margin-bottom: 60px;
+  margin-bottom: 60px;
 }
 
 .hts-sec .overview-section__icon {
-    width: 60px;
-    height: 60px;
-    background: #05eab5;
-    border-radius: 50%;
-    margin: 0 auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  width: 60px;
+  height: 60px;
+  background: #05eab5;
+  border-radius: 50%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .hts-sec .overview-section__icon svg path {
 }
 
 .hts-sec .overview-section__icon svg {
-    stroke: #fff;
-    width: 26px;
+  stroke: #fff;
+  width: 26px;
 }
 
 .hts-sec .overview-section h3 {
-    font-size: 20px;
-    line-height: 1.4;
+  font-size: 20px;
+  line-height: 1.4;
 }
 
 .hts-sec .overview-section {
-    padding: 30px;
+  padding: 30px;
 }
 
 .hts-sec .overview-section p {
-    margin: 0;
-    font-size: 15px;
+  margin: 0;
+  font-size: 15px;
 }
 
 h3.overview-section__heading {
 }
 
 .hts-sec {
-    padding-bottom: 80px;
+  padding-bottom: 80px;
 }
 
 .car-benefit {
-    padding-bottom: 0;
+  padding-bottom: 0;
 }
 .car-benefit .how-work {
-    padding-top: 50px;
+  padding-top: 50px;
 }
+
+/*Reviews Page*/
+.sec-review .exelent span i {
+    font-size: 14px;
+}
+
+.value-sec p::after{
+    display:none;
+}
+
+/*Reviews Page End*/
