--- a/public/backend/admin/assets/css/app.css
+++ b/public/backend/admin/assets/css/app.css
@@ -862,6 +862,23 @@ td.set-scr  span.text-danger {
 .sidebar-wrapper .menu .submenu .submenu-item a:hover {
     margin-left: 0.3rem;
 }
+.dealer-detail-table {
+    border: 1px solid #dee2e6;
+}
+.dealer-detail-table th {
+    color: #000;
+    font-weight: 700;
+    background: #f2f2f2;
+}
+.dealer-detail-table td {
+    color: #000;
+}
+.dealer-detail-table th, .dealer-detail-table td {
+    padding: 15px;
+}
+.dd-imgs img {
+    width: 100%;
+}
 @media screen and (max-width: 1199px) {
     .sidebar-wrapper {
         position: absolute;
