--- a/public/frontend/seller/assets/responsive.css
+++ b/public/frontend/seller/assets/responsive.css
@@ -373,10 +373,11 @@ ul.parts-content li span {
 
 .chart ul li {
     flex: 0 0 20%;
+    font-size: 12px;
 }
 
 .chart {
-    width: 65%;
+    width: 55%;
 }
 
 .step-img img {
@@ -500,10 +501,253 @@ section.sec-2.productPageTn span.alert.alert-success {
     font-size: 13px;
 }
 .reg-form-heading h3 {
-    font-size: 40px;
+    font-size: 34px;
+}
+.reg-form-heading p {
+    font-size: 14px;
+}
+.reg-page-sec1 div h3 {
+    font-size: 30px;
 }
 
+.registration-form {
+    padding: 60px 0px 90px;
+}
 
+.form-main form div input {
+    padding: 8px 18px;
+    font-size: 13px;
+}
+
+.registration-form .form-main.text-center div {
+    padding-bottom: 5px;
+}
+
+.form-main form div button {
+    width: auto;
+    font-size: 13px;
+    padding: 9px 40px;
+    margin-top: 20px;
+}
+
+.registration-form .form-main.text-center div span {
+    font-size: 13px;
+}
+.photo-up-sec-1 div h3 {
+    font-size: 24px;
+}
+
+.photo-up-sec-1 h1 {
+    font-size: 20px;
+}
+.photo-up-sec-2-heading h3 {
+    font-size: 24px;
+    padding-top: 60px;
+    padding-bottom: 30px;
+}
+
+.personal-info .photo-up-sec-2-box-txt h4, h1.step-main-head , .veicle-info .photo-up-sec-2-box-txt h4, .photos-sec .photo-up-sec-2-box-txt h4 {
+    font-size: 22px;
+}
+
+.photo-up-sec-2-box-main, .step-main-wrap {
+    padding: 20px 40px;
+    border-radius: 15px;
+}
+
+.photo-up-sec-2-box-personal-information p {
+    font-size: 14px;
+}
+
+.personal-info .photo-up-sec-2-box-txt h3 {
+    font-size: 15px;
+}
+
+.prf-complete div {
+    width: 20px;
+    height: 20px;
+    overflow: unset;
+}
+
+.photo-up-sec-2-box-btn button {
+    font-size: 12px;
+    width: 130px;
+    
+}
+.personal-info-main {
+    margin-top: 30px;
+}
+
+.personal-info-heading h3 {
+    font-size: 20px;
+}
+
+.personal-info-heading p {
+    font-size: 12px;
+    margin-top: 6px;
+}
+
+.personal-info-form .form h4 {
+    font-size: 13px;
+}
+
+.personal-info-form .form input, .personal-info-form .form select {
+    font-size: 12px;
+}
+
+.personal-info-form .form div:nth-child(2) {
+    margin: 19px 0px;
+}
+
+.personal-info-form-btn {
+    margin-top: 20px;
+}
+
+.personal-info-form-btn button {
+    font-size: 11px;
+    width: auto;
+    padding: 8px 30px;
+}
+h2.part-heading {
+    font-size: 26px;
+}
+
+ul.parts-content li span {
+    padding: 8px 20px;
+    font-size: 14px;
+}
+
+.step-img img {
+    max-width: 230px;
+}
+
+.step-button, .step-button-ext {
+    font-size: 11px;
+    padding: 8px;
+}
+
+section.step-wrapper > p {
+    font-size: 14px;
+}
+.photo-up-sec-2-vehicle-information h3 {
+    font-size: 25px;
+    margin-bottom: 10px;
+}
+
+.photo-up-sec-2-vehicle-information p {
+    font-size: 14px;
+}
+
+.photo-up-sec-2-vi-btn {
+    padding: 9px 20px;
+}
+
+.photo-up-sec-2-vi-btn p {
+    font-size: 12px;
+}
+
+.info-box-image {
+    width: 100%;
+    height: 150px;
+}
+
+.info-box {
+    padding: 20px 30px;
+}
+
+.info-box p {
+    font-size: 11px;
+}
+
+.photo-up-sec-2-vi-input input {
+    font-size: 12px;
+    height: 41px;
+}
+
+.photo-up-sec-2-vi-table td, .photo-up-sec-2-vi-table td p {
+    font-size: 12px;
+}
+
+.SectionTable__component h2 {
+    font-size: 22px;
+}
+
+.photos-sec .photo-up-sec-2-btn {
+    margin-bottom: 0;
+}
+section.photo-up-sec-2 {
+    margin-bottom: 80px;
+}
+.photo-up-sec-2-vehicle-information h3 {
+    font-size: 25px;
+    margin-bottom: 10px;
+}
+
+.photo-up-sec-2-vehicle-information p {
+    font-size: 14px;
+}
+
+.photo-up-sec-2-vi-btn {padding: 9px 20px;}
+
+.photo-up-sec-2-vi-btn p {
+    font-size: 12px;
+}
+
+.info-box-image {
+    width: 100%;
+    height: 150px;
+}
+
+.info-box {
+    padding: 20px 30px;
+}
+
+.info-box p {
+    font-size: 11px;
+}
+
+.photo-up-sec-2-vi-input input {
+    font-size: 12px;
+    height: 41px;
+}
+
+.photo-up-sec-2-vi-table td, .photo-up-sec-2-vi-table td p {
+    font-size: 12px;
+}
+
+.SectionTable__component h2 {
+    font-size: 22px;
+}
+
+.photos-sec .photo-up-sec-2-btn {
+    margin-bottom: 0;
+}
+
+.sec-7-box h4 {
+    font-size: 19px;
+}
+
+.sec-1-txt p {
+    font-size: 13px;
+    max-width: 340px;
+}
+
+.sec-1-txt input {
+    padding: 5px 20px;
+    font-size: 18px;
+}
+
+.sec-1-txt button {font-size: 11px;padding: 10px 0px;}
+
+.sec-7-box {
+    width: 100%;
+}
+
+.sec-7-box {}
+
+.sec-7 {
+    padding: 70px 0px;
+}
 }
 /* 992 */
 @media (max-width:1200px){
@@ -829,25 +1073,27 @@ section.sec-2.productPageTn span {
         width: 43%;
     }
     .chart {
-        width: 80%;
+        width: 53%;
             margin-top: 10px;
     }
     .photo-up-sec-1 div h3 {
-        font-size: 36px;
+        font-size: 28px;
         padding: 5px 0px;
+        margin-bottom: 0 !important;
     }
 
     .photo-up-sec-1 div p {
-     font-size: 18px;
+        font-size: 15px;
         padding-bottom: 10px;
-    padding: 20px 30px;
+        padding: 10px 0 0;
     }
     .photo-up-sec-1 h1 {
     font-size: 24px;
     }
 
 .chart ul li {
-    padding: 9px 5px;
+    padding: 8px 3px;
+    font-size: 10px;
 }
 
 .photo-up-sec-2-heading h3 {
@@ -860,7 +1106,7 @@ section.sec-2.productPageTn span {
 }
 
 .personal-info-form .form input, .personal-info-form .form select {
-    width: 40%;
+    width: 230px;
 }
 
 .step-main-wrap {
@@ -868,12 +1114,12 @@ section.sec-2.productPageTn span {
 }
 
 .step-img img {
-    max-width: 220px;
+    max-width: 190px;
 }
 
 ul.parts-content li span {
     padding: 9px 10px;
-    font-size: 15px;
+    font-size: 11px;
 }
 
 .step-button, .step-button-ext {
@@ -920,6 +1166,155 @@ section.seller-main-banner .banner-content h2 {
 }
 
 /*Seller Main Page End*/
+
+.reg-form-heading h3 {
+    font-size: 30px;
+}
+
+.reg-form-heading p {
+    font-size: 12px;
+    margin-bottom: 0;
+}
+
+.registration-form {
+    padding: 50px 0px 70px;
+}
+
+.form-main form div input {
+    font-size: 12px;
+}
+
+.registration-form .form-main.text-center div {
+    padding-bottom: 0;
+}
+
+.registration-form .form-main.text-center div span {
+    font-size: 11px;
+    bottom: -30px;
+}
+.photo-up-sec-2-heading h3 {
+    font-size: 22px;
+    padding-bottom: 30px;
+    padding-top: 50px;
+}
+
+.personal-info .photo-up-sec-2-box-txt h4, h1.step-main-head, .veicle-info .photo-up-sec-2-box-txt h4, .photos-sec .photo-up-sec-2-box-txt h4 {
+    font-size: 20px;
+}
+
+.photo-up-sec-2-box-personal-information p {
+    font-size: 11px;
+}
+
+.personal-info .photo-up-sec-2-box-txt h3, .veicle-info .photo-up-sec-2-box-txt h3, .completed-status {
+    font-size: 12px;
+}
+
+.prf-complete div {
+    width: 15px;
+    height: 15px;
+}
+
+.prf-complete div img {
+    vertical-align: initial;
+}
+
+.photo-up-sec-2-box-btn button {
+    font-size: 10px;
+    width: 90px;
+    padding: 7px 0;
+}
+
+.personal-info-heading h3 {
+    font-size: 17px;
+}
+
+.personal-info-heading p {
+    font-size: 11px;
+}
+
+.personal-info-main {
+    margin-top: 20px;
+}
+
+.personal-info-form .form h4 {
+    font-size: 11px;
+}
+
+.personal-info-form .form input, .personal-info-form .form select {
+    font-size: 10px;
+}
+
+.personal-info-form-btn button {
+    font-size: 9px;
+}
+
+section.step-wrapper {
+    margin-top: 20px;
+    padding: 25px 30px;
+}
+
+h2.part-heading {
+    font-size: 22px;
+}
+
+.step-button-wrap {
+    margin-top: 20px;
+}
+
+.step-button, .step-button-ext {
+    font-size: 10px;
+    width: 110px;
+}
+
+section.step-wrapper > p {
+    font-size: 12px;
+}
+
+.completed-status i {
+    font-size: 16px;
+}
+.photo-up-sec-2-vehicle-information {
+    padding: 25px 30px;
+    margin-top: 20px;
+}
+
+.photo-up-sec-2-vehicle-information h3 {
+    font-size: 20px;
+}
+
+.photo-up-sec-2-vehicle-information p {
+    font-size: 12px;
+}
+
+.veicle-info .photo-up-sec-2-vi-btn p {
+    font-size: 10px;
+}
+
+.info-box {
+    padding: 20px 20px;
+}
+
+.veicle-info .info-box p {
+    font-size: 10px;
+}
+
+.photo-up-sec-2-vi-table td, .photo-up-sec-2-vi-table td p {
+    font-size: 11px;
+}
+
+.SectionTable__component h2 {
+    font-size: 18px;
+}
+
+.add-photos-box1 {
+    padding: 20px;
+}
+
+section.photo-up-sec-2 {
+    margin-bottom: 60px;
+}
+
 
 }
 
@@ -1258,6 +1653,7 @@ header .nav-link {
 
 .photo-up-sec-2-box-personal-information p {
     font-size: 14px;
+    margin-bottom: 10px;
 }
 
 .photo-up-sec-2-box-btn button {
@@ -1275,7 +1671,7 @@ h1.step-main-head {
 }
 
 h2.part-heading {
-    font-size: 24px;
+    font-size: 21px;
 }
 
 section.step-wrapper {
@@ -1297,11 +1693,6 @@ ul.parts-content li span {
     width: 100%;
 }
 
-.photo-up-sec-2-box-personal-information p {
-    flex: 0 0 40%;
-    margin-bottom: 10px;
-}
-
 .photo-up-sec-2-box-personal-information {
     flex-wrap: wrap;
 }
@@ -1309,6 +1700,7 @@ ul.parts-content li span {
 .personal-info-form .form input, .personal-info-form .form select {
     width: 100%;
     max-width: 280px;
+    font-size: 13px;
 }
 
 section.sec-8 {
@@ -1645,6 +2037,60 @@ section.ycp-sec {
 
 
 /*Seller Main Page End*/
+
+.photo-up-sec-2-box-main {
+    padding: 20px;
+}
+
+.personal-info-heading p {
+    font-size: 13px;
+}
+
+.personal-info-form .form h4 {
+    font-size: 13px;
+}
+
+.photo-up-sec-2-vehicle-information p {
+    font-size: 13px;
+}
+
+.veicle-info .photo-up-sec-2-vi-btn p {
+    font-size: 14px;
+}
+
+.photo-up-sec-2-vi-btns {
+    margin-bottom: 30px;
+}
+
+.veicle-info .info-box p {
+    font-size: 13px;
+}
+
+.photo-up-sec-2-vi-table td, .photo-up-sec-2-vi-table td p {
+    font-size: 13px;
+}
+
+div.photos-sec .main-add-photos [class*=col-] {
+    padding-left: 0;
+    padding-right: 0;
+    margin-bottom: 20px;
+}
+
+.add-p-bottom-row .col-lg-4:nth-child(2) {
+    padding-left: 0;
+    padding-right: 0;
+}
+
+div.photos-sec .add-photos-box1 {
+    padding-left: 20px;
+}
+
+.main-add-photos {
+    margin: 0 10px;
+}
+div.photos-sec .main-add-photos .add-photos-box1 {
+    padding-left: 20px;
+}
 
 
 }
@@ -2429,6 +2875,7 @@ div.chart.reg ul {
      padding: 6px;
     flex: 1;
        white-space: normal;
+       line-break: anywhere;
 }
 
 .photo-up-sec-2-heading h3 {
@@ -2460,11 +2907,12 @@ div.chart.reg ul {
 }
 
 .personal-info-heading h3 {
-    font-size: 25px;
+    font-size: 16px;
 }
 
 section.step-wrapper {
     padding: 20px 20px;
+    border-radius: 10px;
 }
 
 h2.part-heading {
@@ -2481,8 +2929,8 @@ h2.part-heading {
 }
 
 .step-button, .step-button-ext {
-    font-size: 11px;
-    width: 100px;
+    font-size: 10px;
+    width: 90px;
     padding: 4px 0px;
 }
 /**/
@@ -2665,5 +3113,46 @@ table.table.table-striped {
 }
 .summTn {
     overflow-x: scroll;
+}
+.personal-info .photo-up-sec-2-box-txt h4, h1.step-main-head, .veicle-info .photo-up-sec-2-box-txt h4, .photos-sec .photo-up-sec-2-box-txt h4 {
+    font-size: 18px;
+}
+.photo-up-sec-2-vehicle-information {
+    padding: 30px 15px;
+}
+
+.photo-up-sec-2-vehicle-information h3 {
+    font-size: 17px;
+}
+
+.veicle-info .photo-up-sec-2-vi-btn p {
+    font-size: 12px;
+}
+
+.photo-up-sec-2-vi-btn {
+    padding: 7px;
+}
+
+.photo-up-sec-2-vi-btns {
+    margin-bottom: 10px;
+}
+
+.photo-up-sec-2-vi-bnch-btns {
+    right: auto;
+    width: 100%;
+}
+.veicle-info .info-box p {
+    font-size: 12px;
+}
+
+.main-add-photos {
+    margin: 20px 10px 0;
+}
+
+.photos-sec .photo-up-sec-2-btn {
+    margin-top: 0;
+}
+.completed-status {
+    margin-bottom: 10px;
 }
 }
