--- a/public/frontend/seller/assets/style.css
+++ b/public/frontend/seller/assets/style.css
@@ -102,6 +102,10 @@ ul.navlinks {
     padding: 12px 30px;
     border-radius: 50px;
     transition:all .3s linear 0s;
+    cursor: pointer;
+}
+.head-btns button:last-child {
+    cursor: pointer !important;
 }
 .head-btns button:hover {
     background-color: #05eab5;
@@ -1137,6 +1141,10 @@ section.photo-up-sec-2 {
     color:white;
     border-radius:50px;
     padding: 10px 20px;
+    transition: all .4s ease;
+}
+.form-main form div button:hover {
+    background: #202543;
 }
 
 .form-main form div:nth-child(2){
@@ -1293,6 +1301,10 @@ section.photo-up-sec-2 {
 .personal-info-form-btn button {
     width: auto;
     padding: 12px 40px;
+    transition: all .4s ease;
+}
+.personal-info-form-btn button:hover {
+    background-color: #7977a2;
 }
 .withImgInLabel .photo-up-sec-2-vi-btn > img,div#myDIV3 {
     display:none;
@@ -2371,51 +2383,51 @@ section.sec-review {
 
 
 /*Loader Css*/
-div#myProgress {
-    position: fixed;
-    background: #191738;
-    width: 100%;
-    height: 100%;
-    z-index: 99;
-    color: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    transform-origin: top;
-    transition: all .4s ease-in;
+/*div#myProgress {*/
+/*    position: fixed;*/
+/*    background: #191738;*/
+/*    width: 100%;*/
+/*    height: 100%;*/
+/*    z-index: 99;*/
+/*    color: #fff;*/
+/*    display: flex;*/
+/*    justify-content: center;*/
+/*    align-items: center;*/
+/*    flex-direction: column;*/
+/*    transform-origin: top;*/
+/*    transition: all .4s ease-in;*/
     
-}
-div#myProgress .loader-img img {
-    filter: invert(1);
-    animation: zoomIn 1.5s ease infinite;
-}
-div#myBar {
-    max-width: 300px;
-    width: 100%;
-    text-align: center;
+/*}*/
+/*div#myProgress .loader-img img {*/
+/*    filter: invert(1);*/
+/*    animation: zoomIn 1.5s ease infinite;*/
+/*}*/
+/*div#myBar {*/
+/*    max-width: 300px;*/
+/*    width: 100%;*/
+/*    text-align: center;*/
     /* background: #f5f5f5; */
-    display: none;
-}
-div#myBar #bar {
-    width: 0%;
-    height: 3px;
-    background-color: #04AA6D;
-    text-align: center;
-    margin: 10px 0;
-    display:block;
-}
-@keyframes zoomIn {
-    0% {
-      transform: scale(1);
-    }
-    50% {
-      transform: scale(1.2);
-    }
-    100% {
-      transform: scale(1);
-    }
-  }
+/*    display: none;*/
+/*}*/
+/*div#myBar #bar {*/
+/*    width: 0%;*/
+/*    height: 3px;*/
+/*    background-color: #04AA6D;*/
+/*    text-align: center;*/
+/*    margin: 10px 0;*/
+/*    display:block;*/
+/*}*/
+/*@keyframes zoomIn {*/
+/*    0% {*/
+/*      transform: scale(1);*/
+/*    }*/
+/*    50% {*/
+/*      transform: scale(1.2);*/
+/*    }*/
+/*    100% {*/
+/*      transform: scale(1);*/
+/*    }*/
+/*  }*/
 
 .f-btn{
     text-align: right;
